# aws-robomaker-small-house-world

./: CMakeLists.txt  README.md  package.xml
launch/: small_house.launch  small_house.launch.py  small_house_turtlebot_navigation.launch  small_house_turtlebot_navigation.launch.py  small_house_turtlebot_slam.launch  turtlebot3_navigation.launch  turtlebot3_navigation.launch.py  view_small_house.launch  view_small_house.launch.py
maps/turtlebot3_waffle_pi/: map.pgm  map.yaml
models/FloorLarge/: model.config  model.sdf
models/aws_robomaker_residential_AirconditionerA_01/: model.config  model.sdf
models/aws_robomaker_residential_AirconditionerB_01/: model.config  model.sdf
models/aws_robomaker_residential_BalconyTable_01/: model.config  model.sdf
models/aws_robomaker_residential_Ball_01/: model.config  model.sdf
models/aws_robomaker_residential_Bed_01/: model.config  model.sdf
models/aws_robomaker_residential_Board_01/: model.config  model.sdf
models/aws_robomaker_residential_Carpet_01/: model.sdf
models/aws_robomaker_residential_ChairA_01/: model.config  model.sdf
models/aws_robomaker_residential_ChairD_01/: model.config  model.sdf
models/aws_robomaker_residential_Chandelier_01/: model.config  model.sdf
models/aws_robomaker_residential_CoffeeTable_01/: model.sdf
models/aws_robomaker_residential_CookingBench_01/: model.config  model.sdf
models/aws_robomaker_residential_Curtain_01/: model.config  model.sdf
models/aws_robomaker_residential_DeskPortraitA_01/: model.config  model.sdf
models/aws_robomaker_residential_DeskPortraitA_02/: model.config  (+1 more)
param/: waffle_pi.yaml
routes/: route.yaml
worlds/: small_house.world  small_house.world.erb  small_house_dynamic.world
(+202 files in other folders)
